--- a/package.xml
+++ b/package.xml
@@ -19,12 +19,15 @@
   <build_depend>robosherlock_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>ontologenius</build_depend>
   <build_export_depend>robosherlock_msgs</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
+  <build_export_depend>ontologenius</build_export_depend>
   <exec_depend>robosherlock_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>ontologenius</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
